<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.TicTacToe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AddPlayers">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="195dp"
        android:layout_gravity="center"
        android:contentDescription="@string/addPlayer_imgTitle"
        app:srcCompat="@drawable/title_logo" />

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ui_title"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="-2.5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/addPlayer_imgFrog"
            android:src="@drawable/frog"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/player1Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/austine_regular"
            android:hint="@string/addPlayer_hint1"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="14"
            android:minHeight="48dp"
            android:paddingTop="20dp"
            android:textAlignment="center"
            android:textColor="#004D40"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ui_title"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/rabbit"
            android:adjustViewBounds="true"
            android:contentDescription="@string/addPlayer_imgRabbit" />

        <EditText
            android:id="@+id/player2Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/austine_regular"
            android:hint="@string/addPlayer_hint2"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="14"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingTop="20dp"
            android:textAlignment="center"
            android:textColor="#004D40"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/austine_regular"
        android:paddingTop="10dp"
        android:text="@string/addPlayer_btn"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/creditBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/austine_regular"
        android:paddingTop="10dp"
        android:text="@string/credits"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>